# hector

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
bench/: Cargo.toml
benches/: encode-compare.rs
src/: decode.rs  encode.rs  lib.rs
src/decode/: fallback.rs
src/encode/: fallback.rs
