[package]
name = "hector"
version = "0.1.0"
description = "A hex encoding library"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
alloc = []
default = ["std"]
std = ["alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
criterion = "0.5"
hex = "0.4"
faster-hex = "0.9.0"
rand = "0.8.5"

[[bench]]
name = "encode-compare"
harness = false
required-features = ["std"]
